# mimir-well

./: .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_v2.8.0.md  CHANGELOG.md  DATA_FLOW.md  LICENSE  README.md  SPRINT_8_PLAN.md  STRUCTURAL_REPORT.md  pyproject.toml  start-eye.sh
scripts/: migrate_fact_store.py
src/mimir_well/: __init__.py  audit.py  backup.py  budget.py  config.py  context_engineer.py  core.py  decay.py  guard.py  repair.py  schema.py  wyrd_graph.py
src/mimir_well/eye/: __init__.py  __main__.py  app.py
src/mimir_well/migrations/: __init__.py  runner.py
tests/: test_audit_trail.py  test_backup.py  test_core.py  test_decay.py  test_guard_trust.py  test_namespacing.py  test_recall_quality.py  test_repair.py  test_t8_1a_delete_audit.py  test_t8_1b_update_delete_isolation.py  test_t8_1c_supersede_isolation.py  test_t8_1d_store_with_validity.py  test_t8_1e_get_memory_isolation.py  test_t8_2_read_isolation.py  test_t8_3_wyrd_graph_isolation.py  test_t8_4_performance.py  test_t8_5_architecture.py  test_t8_6_coverage.py  test_t9_1_thread_safety.py  test_t9_3_resilience.py  test_t9_5_context_engineer.py  test_t9_6_config.py  test_t9_s91_patches.py  test_t9_s92_patches.py  test_t9_s92_wyrd_coverage.py  test_t9_s94_context_engineer.py  test_t9_s94_decay_edges.py  test_t9_s94_eye_app.py
