[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimir-well"
version = "2.0.0"
description = "AI Memory Database with Ebbinghaus Decay and Self-Healing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Eldrä Járnsdóttir", email = "runa@hrabanazviking.com" },
]
keywords = ["memory", "ai", "sqlite", "ebbinghaus", "forgetting-curve", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/runafreyjasdottir/mimir-well"
Repository = "https://github.com/runafreyjasdottir/mimir-well"
Issues = "https://github.com/runafreyjasdottir/mimir-well/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mimir_well"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]